crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q10_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q10"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                              |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                                                                                                                                |
|               |   Projection: hits.RegionID, sum(hits.AdvEngineID), count(Int64(1)) AS c, avg(hits.ResolutionWidth), count(DISTINCT hits.UserID)                                                                                                                  |
|               |     Aggregate: groupBy=[[hits.RegionID]], aggr=[[sum(CAST(hits.AdvEngineID AS Int64)), count(Int64(1)), avg(CAST(hits.ResolutionWidth AS Float64)), count(DISTINCT hits.UserID)]]                                                                 |
|               |       TableScan: hits projection=[RegionID, UserID, ResolutionWidth, AdvEngineID]                                                                                                                                                                 |
| physical_plan | SortPreservingMergeExec: [c@2 DESC], fetch=10                                                                                                                                                                                                     |
|               |   ProjectionExec: expr=[RegionID@0 as RegionID, sum(hits.AdvEngineID)@1 as sum(hits.AdvEngineID), count(Int64(1))@2 as c, avg(hits.ResolutionWidth)@3 as avg(hits.ResolutionWidth), count(DISTINCT hits.UserID)@4 as count(DISTINCT hits.UserID)] |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@2 DESC], preserve_partitioning=[true]                                                                                                                                                         |
|               |       AggregateExec: mode=FinalPartitioned, gby=[RegionID@0 as RegionID], aggr=[sum(hits.AdvEngineID), count(Int64(1)), avg(hits.ResolutionWidth), count(DISTINCT hits.UserID)]                                                                   |
|               |         RepartitionExec: partitioning=Hash([RegionID@0], 16), input_partitions=16                                                                                                                                                                 |
|               |           AggregateExec: mode=Partial, gby=[RegionID@0 as RegionID], aggr=[sum(hits.AdvEngineID), count(Int64(1)), avg(hits.ResolutionWidth), count(DISTINCT hits.UserID)]                                                                        |
|               |             SchemaCastScanExec                                                                                                                                                                                                                    |
|               |               BytesProcessedExec                                                                                                                                                                                                                  |
|               |                 DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                       |
|               |                                                                                                                                                                                                                                                   |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
