crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q11_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q11"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: u DESC NULLS FIRST, fetch=10                                                                                          |
|               |   Projection: hits.MobilePhoneModel, count(alias1) AS u                                                                     |
|               |     Aggregate: groupBy=[[hits.MobilePhoneModel]], aggr=[[count(alias1)]]                                                    |
|               |       Aggregate: groupBy=[[hits.MobilePhoneModel, hits.UserID AS alias1]], aggr=[[]]                                        |
|               |         Filter: hits.MobilePhoneModel != LargeUtf8("")                                                                      |
|               |           TableScan: hits projection=[UserID, MobilePhoneModel]                                                             |
| physical_plan | SortPreservingMergeExec: [u@1 DESC], fetch=10                                                                               |
|               |   ProjectionExec: expr=[MobilePhoneModel@0 as MobilePhoneModel, count(alias1)@1 as u]                                       |
|               |     SortExec: TopK(fetch=10), expr=[count(alias1)@1 DESC], preserve_partitioning=[true]                                     |
|               |       AggregateExec: mode=FinalPartitioned, gby=[MobilePhoneModel@0 as MobilePhoneModel], aggr=[count(alias1)]              |
|               |         RepartitionExec: partitioning=Hash([MobilePhoneModel@0], 16), input_partitions=16                                   |
|               |           AggregateExec: mode=Partial, gby=[MobilePhoneModel@0 as MobilePhoneModel], aggr=[count(alias1)]                   |
|               |             AggregateExec: mode=FinalPartitioned, gby=[MobilePhoneModel@0 as MobilePhoneModel, alias1@1 as alias1], aggr=[] |
|               |               RepartitionExec: partitioning=Hash([MobilePhoneModel@0, alias1@1], 16), input_partitions=16                   |
|               |                 AggregateExec: mode=Partial, gby=[MobilePhoneModel@1 as MobilePhoneModel, UserID@0 as alias1], aggr=[]      |
|               |                   FilterExec: MobilePhoneModel@1 !=                                                                         |
|               |                     SchemaCastScanExec                                                                                      |
|               |                       BytesProcessedExec                                                                                    |
|               |                         DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                         |
|               |                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
