crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q12_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q12"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                      |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: u DESC NULLS FIRST, fetch=10                                                                                                                        |
|               |   Projection: hits.MobilePhone, hits.MobilePhoneModel, count(alias1) AS u                                                                                 |
|               |     Aggregate: groupBy=[[hits.MobilePhone, hits.MobilePhoneModel]], aggr=[[count(alias1)]]                                                                |
|               |       Aggregate: groupBy=[[hits.MobilePhone, hits.MobilePhoneModel, hits.UserID AS alias1]], aggr=[[]]                                                    |
|               |         Filter: hits.MobilePhoneModel != LargeUtf8("")                                                                                                    |
|               |           TableScan: hits projection=[UserID, MobilePhone, MobilePhoneModel]                                                                              |
| physical_plan | SortPreservingMergeExec: [u@2 DESC], fetch=10                                                                                                             |
|               |   ProjectionExec: expr=[MobilePhone@0 as MobilePhone, MobilePhoneModel@1 as MobilePhoneModel, count(alias1)@2 as u]                                       |
|               |     SortExec: TopK(fetch=10), expr=[count(alias1)@2 DESC], preserve_partitioning=[true]                                                                   |
|               |       AggregateExec: mode=FinalPartitioned, gby=[MobilePhone@0 as MobilePhone, MobilePhoneModel@1 as MobilePhoneModel], aggr=[count(alias1)]              |
|               |         RepartitionExec: partitioning=Hash([MobilePhone@0, MobilePhoneModel@1], 16), input_partitions=16                                                  |
|               |           AggregateExec: mode=Partial, gby=[MobilePhone@0 as MobilePhone, MobilePhoneModel@1 as MobilePhoneModel], aggr=[count(alias1)]                   |
|               |             AggregateExec: mode=FinalPartitioned, gby=[MobilePhone@0 as MobilePhone, MobilePhoneModel@1 as MobilePhoneModel, alias1@2 as alias1], aggr=[] |
|               |               RepartitionExec: partitioning=Hash([MobilePhone@0, MobilePhoneModel@1, alias1@2], 16), input_partitions=16                                  |
|               |                 AggregateExec: mode=Partial, gby=[MobilePhone@1 as MobilePhone, MobilePhoneModel@2 as MobilePhoneModel, UserID@0 as alias1], aggr=[]      |
|               |                   FilterExec: MobilePhoneModel@2 !=                                                                                                       |
|               |                     SchemaCastScanExec                                                                                                                    |
|               |                       BytesProcessedExec                                                                                                                  |
|               |                         DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                       |
|               |                                                                                                                                                           |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
