crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q14_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q14"
---
+---------------+---------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                |
+---------------+---------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: u DESC NULLS FIRST, fetch=10                                                                                  |
|               |   Projection: hits.SearchPhrase, count(alias1) AS u                                                                 |
|               |     Aggregate: groupBy=[[hits.SearchPhrase]], aggr=[[count(alias1)]]                                                |
|               |       Aggregate: groupBy=[[hits.SearchPhrase, hits.UserID AS alias1]], aggr=[[]]                                    |
|               |         Filter: hits.SearchPhrase != LargeUtf8("")                                                                  |
|               |           TableScan: hits projection=[UserID, SearchPhrase]                                                         |
| physical_plan | SortPreservingMergeExec: [u@1 DESC], fetch=10                                                                       |
|               |   ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase, count(alias1)@1 as u]                                       |
|               |     SortExec: TopK(fetch=10), expr=[count(alias1)@1 DESC], preserve_partitioning=[true]                             |
|               |       AggregateExec: mode=FinalPartitioned, gby=[SearchPhrase@0 as SearchPhrase], aggr=[count(alias1)]              |
|               |         RepartitionExec: partitioning=Hash([SearchPhrase@0], 16), input_partitions=16                               |
|               |           AggregateExec: mode=Partial, gby=[SearchPhrase@0 as SearchPhrase], aggr=[count(alias1)]                   |
|               |             AggregateExec: mode=FinalPartitioned, gby=[SearchPhrase@0 as SearchPhrase, alias1@1 as alias1], aggr=[] |
|               |               RepartitionExec: partitioning=Hash([SearchPhrase@0, alias1@1], 16), input_partitions=16               |
|               |                 AggregateExec: mode=Partial, gby=[SearchPhrase@1 as SearchPhrase, UserID@0 as alias1], aggr=[]      |
|               |                   FilterExec: SearchPhrase@1 !=                                                                     |
|               |                     SchemaCastScanExec                                                                              |
|               |                       BytesProcessedExec                                                                            |
|               |                         DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                 |
|               |                                                                                                                     |
+---------------+---------------------------------------------------------------------------------------------------------------------+
