crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q15_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q15"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                         |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                           |
|               |   Projection: hits.SearchEngineID, hits.SearchPhrase, count(Int64(1)) AS c                                                                   |
|               |     Aggregate: groupBy=[[hits.SearchEngineID, hits.SearchPhrase]], aggr=[[count(Int64(1))]]                                                  |
|               |       Filter: hits.SearchPhrase != LargeUtf8("")                                                                                             |
|               |         TableScan: hits projection=[SearchEngineID, SearchPhrase]                                                                            |
| physical_plan | SortPreservingMergeExec: [c@2 DESC], fetch=10                                                                                                |
|               |   ProjectionExec: expr=[SearchEngineID@0 as SearchEngineID, SearchPhrase@1 as SearchPhrase, count(Int64(1))@2 as c]                          |
|               |     SortExec: TopK(fetch=10), expr=[count(Int64(1))@2 DESC], preserve_partitioning=[true]                                                    |
|               |       AggregateExec: mode=FinalPartitioned, gby=[SearchEngineID@0 as SearchEngineID, SearchPhrase@1 as SearchPhrase], aggr=[count(Int64(1))] |
|               |         RepartitionExec: partitioning=Hash([SearchEngineID@0, SearchPhrase@1], 16), input_partitions=16                                      |
|               |           AggregateExec: mode=Partial, gby=[SearchEngineID@0 as SearchEngineID, SearchPhrase@1 as SearchPhrase], aggr=[count(Int64(1))]      |
|               |             FilterExec: SearchPhrase@1 !=                                                                                                    |
|               |               SchemaCastScanExec                                                                                                             |
|               |                 BytesProcessedExec                                                                                                           |
|               |                   DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                |
|               |                                                                                                                                              |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------+
